[gd_scene load_steps=2 format=3 uid="uid://bv8setj36ghkl"]

[ext_resource type="Script" path="res://Interface/Missions/task_characters_container.gd" id="1_ybew4"]

[node name="TaskCharactersContainer" type="TextureRect"]
custom_minimum_size = Vector2(300, 400)
anchors_preset = -1
anchor_left = 0.002
anchor_top = -0.005
anchor_right = 0.002
anchor_bottom = -0.005
offset_left = -0.304
offset_top = 0.24
offset_right = 779.696
offset_bottom = 549.24
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_ybew4")

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -3.0
offset_top = 3.0
offset_right = -31.0
offset_bottom = 128.0
grow_horizontal = 2
columns = 6

[node name="TaskCharacterSlot1" type="Panel" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="TaskCharacterSlot2" type="Panel" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="TaskCharacterSlot3" type="Panel" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="TaskCharacterSlot4" type="Panel" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="TaskCharacterSlot5" type="Panel" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="TaskCharacterSlot6" type="Panel" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="AccepyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Accept"

[node name="PlayerCharacterScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -149.5
offset_right = -38.0
offset_bottom = 187.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerCharactersGridContainer" type="GridContainer" parent="PlayerCharacterScrollContainer"]
layout_mode = 2
columns = 6
